Bug 516217 - After changing screen resolution, kded quits with wayland protocol error ("unknown object (4278190092), message current_mode(o)")
Summary: After changing screen resolution, kded quits with wayland protocol error ("un...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.6.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2026-02-18 15:33 UTC by Jin Liu
Modified: 2026-04-03 00:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments
kded logs (56.84 KB, text/plain)
2026-02-21 11:25 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2026-02-18 15:33:49 UTC
STEPS TO REPRODUCE
1. Open display configuration.
2. Set resolution to 1920x1080. Apply.
3. Set resolution to 1920x1200. Apply.

OBSERVED RESULT
journal contains:

2月 18 23:26:01 laptop-jin-mi kded6[15501]: unknown object (4278190080), message current_mode(o)
2月 18 23:26:01 laptop-jin-mi kded6[15501]: The Wayland connection experienced a fatal error: invalid argument
2月 18 23:26:01 laptop-jin-mi python3[1829]: kf.notifications: KDE platform plugin is loaded but SNI unavailable
2月 18 23:26:01 laptop-jin-mi systemd[1182]: plasma-kded6.service: Main process exited, code=exited, status=255/EXCEPTION
2月 18 23:26:01 laptop-jin-mi systemd[1182]: plasma-kded6.service: Failed with result 'exit-code'.

EXPECTED RESULT
kded doesn't quit.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 16 GiB of RAM (15.0 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 1 Oliver Beard 2026-02-18 22:00:35 UTC
A backtrace from kded6 would be needed.

You can find the crash in Crashed Processes Viewer, and for the best info, you can "Run Interactive Debugger" to use GDB. Enable debuginfod for the session to download symbols, and always type 'c' to continue without paging. When the prompt appears, type 'bt' and copy the results to a text file and add it as an attachment to the bug.
Comment 2 Jin Liu 2026-02-19 02:25:30 UTC
There was no crash. The process exited with a code 255 (presumably an uncaught exception?), maybe caused by:

2月 18 23:26:01 laptop-jin-mi kded6[15501]: unknown object (4278190080), message current_mode(o)
2月 18 23:26:01 laptop-jin-mi kded6[15501]: The Wayland connection experienced a fatal error: invalid argument
Comment 3 Nate Graham 2026-02-20 16:08:06 UTC
Could you:
1. run `WAYLAND_DEBUG=1 kded6 --replace`
2. reproduce the bug
3. attach a file with the (very long and verbose) wayland log in it
4. Paste the last 30 or so lines of the log here

Thanks!
Comment 4 Jin Liu 2026-02-21 11:25:15 UTC
Created attachment 189918 [details]
kded logs

Log attached. Last lines:

[2934369.108] {Default Queue} kde_output_device_v2#49.mode(new id kde_output_device_mode_v2#4278190105)
[2934369.112] {Default Queue} discarded kde_output_device_mode_v2#4278190105.size(640, 480)
[2934369.115] {Default Queue} discarded kde_output_device_mode_v2#4278190105.refresh(59940)
[2934369.118] {Default Queue} discarded kde_output_device_mode_v2#4278190105.flags(0)
[2934369.121] {Default Queue} kde_output_device_v2#49.current_mode(nil)
[2934369.125] {Default Queue} kde_output_device_v2#49.uuid("16c39404-7da8-44d8-bce0-1b8235f59599")
[2934369.131] {Default Queue} kde_output_device_v2#49.edid("AP///////wBJFDQSAAAAACoYAQSlIBR4Bu6Ro1RMmSYPUFQhCADhwNHA0QCpQLMAlQCBgIFA6ikAwFEgHDBAJkRARcsQAAAYAAAA9wAKAECCACggAAAAAAAAAAAA/QAyfR6g/wEKICAgICAgAAAA/ABRRU1VIE1vbml0b3IKAToCAwsARn1lYFkfYQAAABAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALw==")
[2934369.140] {Default Queue} kde_output_device_v2#49.enabled(1)
[2934369.144] {Default Queue} kde_output_device_v2#49.capabilities(8640)
[2934369.148] {Default Queue} kde_output_device_v2#49.overscan(0)
[2934369.150] {Default Queue} kde_output_device_v2#49.vrr_policy(0)
[2934369.154] {Default Queue} kde_output_device_v2#49.rgb_range(0)
[2934369.157] {Default Queue} kde_output_device_v2#49.high_dynamic_range(0)
[2934369.161] {Default Queue} kde_output_device_v2#49.sdr_brightness(200)
[2934369.163] {Default Queue} kde_output_device_v2#49.wide_color_gamut(0)
[2934369.167] {Default Queue} kde_output_device_v2#49.auto_rotate_policy(1)
[2934369.169] {Default Queue} kde_output_device_v2#49.icc_profile_path("")
[2934369.173] {Default Queue} kde_output_device_v2#49.brightness_metadata(0, 0, 0)
[2934369.177] {Default Queue} kde_output_device_v2#49.brightness_overrides(-1, -1, -1)
[2934369.182] {Default Queue} kde_output_device_v2#49.sdr_gamut_wideness(0)
[2934369.184] {Default Queue} kde_output_device_v2#49.color_profile_source(0)
[2934369.187] {Default Queue} kde_output_device_v2#49.brightness(10000)
[2934369.192] {Default Queue} kde_output_device_v2#49.color_power_tradeoff(0)
[2934369.195] {Default Queue} kde_output_device_v2#49.dimming(10000)
[2934369.199] {Default Queue} kde_output_device_v2#49.replication_source("")
[2934369.203] {Default Queue} kde_output_device_v2#49.ddc_ci_allowed(1)
[2934369.206] {Default Queue} kde_output_device_v2#49.max_bits_per_color(0)
[2934369.211] {Default Queue} kde_output_device_v2#49.automatic_max_bits_per_color_limit(0)
[2934369.214] {Default Queue} kde_output_device_v2#49.max_bits_per_color_range(4294967295, 4294967295)
[2934369.216] {Default Queue} kde_output_device_v2#49.edr_policy(1)
[2934369.219] {Default Queue} kde_output_device_v2#49.sharpness(0)
[2934369.221] {Default Queue} kde_output_device_v2#49.priority(1)
[2934369.223] {Default Queue} kde_output_device_v2#49.auto_brightness(0)
[2934369.225] {Default Queue} kde_output_device_v2#49.done()
xsettingsd: Loaded 16 settings from /home/jin/.config/xsettingsd/xsettingsd.conf
xsettingsd: Created window 0xe00001 on screen 0 with timestamp 21091
xsettingsd: Selection _XSETTINGS_S0 is owned by 0x0
xsettingsd: Took ownership of selection _XSETTINGS_S0
unknown object (4278190092), message current_mode(o)
The Wayland connection experienced a fatal error: Invalid argument




Note that everything except the last two lines are printed before the resolution change.

The system is KDE Linux in a QEMU virtual machine. But I can also reproduce on the host.

$ kinfo
Operating System: KDE Linux 2026-02-19
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-zen1-2-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 8 GiB of RAM (7.7 GiB usable)
Graphics Processor: virgl
Comment 6 Bug Janitor Service 2026-03-06 15:31:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6384
Comment 7 Zamundaaa 2026-03-28 02:40:43 UTC
Git commit b597d749d580d8bd943e17b23b4562f76494e532 by Xaver Hugl.
Committed on 28/03/2026 at 02:19.
Pushed by zamundaaa into branch 'master'.

devicenotifications: keep mode objects around until KWin removes them

Otherwise we crash when the current_mode event references the mode we already
deleted.

M  +16   -1    devicenotifications/devicenotifications.cpp
M  +10   -0    devicenotifications/devicenotifications.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/b597d749d580d8bd943e17b23b4562f76494e532
Comment 8 Zamundaaa 2026-03-28 17:35:05 UTC
Git commit 5b967ff323fc53986f7dd69f493c58d55b6b6e26 by Xaver Hugl.
Committed on 28/03/2026 at 17:02.
Pushed by zamundaaa into branch 'Plasma/6.6'.

devicenotifications: keep mode objects around until KWin removes them

Otherwise we crash when the current_mode event references the mode we already
deleted.
(cherry picked from commit b597d749d580d8bd943e17b23b4562f76494e532)

M  +16   -1    devicenotifications/devicenotifications.cpp
M  +10   -0    devicenotifications/devicenotifications.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/5b967ff323fc53986f7dd69f493c58d55b6b6e26