devicenotifications: keep mode objects around until KWin removes them

Otherwise we crash when the current_mode event references the mode we already
deleted.

BUG: 516217
(cherry picked from commit b597d749d580d8bd943e17b23b4562f76494e532)